@@ -59,10 +59,49 @@ public class Duel extends StdCommand
 
 		final String whomToKill=CMParms.combine(commands,1);
 		target=mob.location().fetchInhabitant(whomToKill);
-		if((target==null)||(!CMLib.flags().canBeSeenBy(target,mob)))
+		if(target==null)
 		{
-			mob.tell(L("I don't see '@x1' here.",whomToKill));
-			return false;
+			if("accept".startsWith(whomToKill.toLowerCase()))
+			{
+				final Room R=mob.location();
+				if(R==null)
+					return false;
+				for(final Enumeration<MOB> m=R.inhabitants();m.hasMoreElements();)
+				{
+					final MOB M = m.nextElement();
+					if((M!=null)
+					&&(!M.isMonster())
+					&&(M != mob))
+					{
+						final Tattoo uiT=M.findTattoo("IDUEL");
+						final Tattoo iuT=mob.findTattoo("UDUEL");
+						if((uiT!=null)&&(iuT!=null))
+						{
+							target=M;
+							break;
+						}
+					}
+				}
+			}
+			if(target == null)
+			{
+				mob.tell(L("I don't see '@x1' here.",whomToKill));
+				return false;
+			}
+		}
+		if(!CMLib.flags().canBeSeenBy(target,mob))
+		{
+			final Tattoo uiT=target.findTattoo("IDUEL");
+			final Tattoo iuT=mob.findTattoo("UDUEL");
+			if((uiT!=null)&&(iuT!=null))
+			{
+				// can accept duel from the unseen
+			}
+			else
+			{
+				mob.tell(L("I don't see '@x1' here.",whomToKill));
+				return false;
+			}
 		}
 
 		if(mob==target)
