@@ -306,6 +306,13 @@
 #     [COMMANDID] is the required command id that is being counted
 #     See help on Zapper Masks (AHELP ZAPPERMASKS) for basic syntax.
 #
+# ... EVENT="CHARITY" AMOUNT=[NUMBER] ZAPPERMASK="[ZAPPERMASK]"  ...
+#     [AMOUNT] is the total amount of absolute charity given to a begger
+#     [ZAPPERMASK] is a standard mask denoting mobs whos begging gains the 
+#     player an amount towards this achievement. See archon help on 
+#     Zapper Masks (AHELP ZAPPERMASKS) from the command line for 
+#     syntax on zapper-masks.
+# 
 # Some achievement events are updated every mud-hour (10 mins) automatically by 
 # the system for all players on-line and in memory.
 #
