@@ -6,6 +6,9 @@
   5. New Deviations features: mob power levels, sorting
   6. New Deviations button in the MUDGrinder map and room editors
   7. New Chants: Summon Squall
+  8. Looking UP into a generated sky now gives some basic info.
+  9. New Exit type: Skyway -- for supporting the above.
+ 10. New Achievement type: CHARITY
 
 # Build 5.10.1 Release 1/01/2023
   1. FasterRecovery expanded and new char stat REJUVRATE for Prop*Adjuster
